assets/css/main.less
/* ... */
h1, .h1 {
	font-size: 3rem;
	margin-top: 4rem;
	line-height: 0.9;
}
h2, .h2 {
	font-size: 2.2rem;
	margin-top: 3rem;
}
h3, .h3 {
	font-family: 'libre_franklin';
	font-size: 1.5rem;
	margin-top: 2rem;
}
h4, .h4 {
	font-family: 'libre_franklin';
	font-size: 1.2rem;
	margin-top: 2rem;
}
p, figcaption {
	font-size: 1rem;
	line-height: 1.8;
	color: var(--text-color);
	max-width: 64ch;
	&.lede {
		font-size: var(--text-l);
		color: var(--heading-color);
		margin-top: var(--m);
		margin-bottom: var(--l);
		@media(max-width: 840px) {
			margin-top: var(--l);
		}
	}
}
.lede {
	& p {
		font-size: var(--text-l);
	}
}
em, figcaption {
	font-style: italic;
}
strong {
	font-weight: bold;
}
cite {
	font-style: italic;
}
::selection {
	background-color: var(--brand-color--l);
}

a {
	text-decoration: underline;
	text-decoration-color: var(--brand-color);
	text-decoration-skip: ink;
	text-decoration-thickness: 2px;
	color: var(--heading-color);
	transition: var(--fast);
	&:hover {
		text-decoration-thickness: 3px;
		transition: var(--fast);
		&::after {
			/* colors the arrow on .link-arrow::after type of links on hover */
			color: #ffbe12;
			transition: var(--fast);
			transform: translateX(1px);
		}
		&::before {
			/* colors the arrow on .link-arrow::after type of links on hover */
			color: #ffbe12;
			transition: var(--fast);
			transform: translateX(-1px);
		}
	}
}
a.cover:hover,
a .cover:hover,
a:hover img {
		box-shadow: 0px 4px 0px var(--brand-color);
		transition: all var(--slow);
}
figure video {
	width: 100%;
}

blockquote {
	padding: var(--m) var(--l);
	margin-top: var(--l);
	margin-bottom: var(--l);
	border-left: 3px solid var(--brand-color);
	transform: translateX(-16px);
	& p {
		margin-bottom: var(--s);
		font-size: var(--text-l);
	}
	& p > a {
		font-size: var(--text-s);
		color: var(--text-color);
	}
}

ul, ol {
	padding-left: 32px;
	color: var(--text-color);
	& ul,
	& ol { /* Nested lists */
		margin-top: 0.4rem;
		margin-bottom: 1rem;
	}
	& li {
		margin-bottom: 0.8rem;
	}
}

/*----------------------------
	# Grids & blocks
----------------------------*/
nav, main {
	width: 100%;
	max-width: 1280px;
	margin: auto;
	padding-left: 32px;
	padding-right: 32px;
	margin-bottom: var(--l);
}
nav, main, footer {
	@media(max-width: 840px) {
		padding-left: 24px;
		padding-right: 24px;
	}
}

main.home,
main.about { /* homepage layout */
	& article {
		display: grid;
		grid-template-columns: minmax(300px, 300px) minmax(476px, 1fr);
		grid-template-rows: auto;
		grid-template-areas:
		"col-1 col-2";
		margin-top: var(--xl);
		@media(max-width: 840px) {
			display: block;
		}
		& header {
			grid-area: col-1;
			& :first-child {
				margin-top: 1rem;
				@media(max-width: 840px) {
					margin-top: initial;
				}
			}
		}
		& section {
			grid-area: col-2;
		}
	}
}
main.notes,
main.play,
main.work {
	& header {
		margin-bottom: var(--xl);
		border-bottom: 1px solid var(--light-gray-color);
	}
}
main.play {
	& div,
	& article,
	& article a {
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
	}
	& article {
		align-items: flex-start;
		max-height: 400px;
		margin: 0 var(--l) var(--l) 0;
		& a {
			align-items: center;
			justify-content: center;
			background-color: var(--light-gray-color);
			& img, & p {
				width: 100%;
				flex: 0 1 auto;
			}
			& img {
				max-height: 400px;
			}
			& p {
				max-width: 300px;
				margin: var(--m);
			}
		}
		@media(max-width: 480px) {
			width: 100%;
			max-height: unset;
			& a {
				& img {
					width: 100%;
					height: auto;
					max-height: none;
				}
			}
		}
	}
}

article {
	margin: auto;
	&:last-child {
		border-bottom: none;
	}
}
/* ... */

